--- a/pages/index.less
+++ b/pages/index.less
@@ -16,8 +16,11 @@
     margin: 0 auto;
     position: relative;
     top: 220px;
+    background-color: #ffffff;
+    z-index: 10;
   }
   .bottom-area{
+    z-index: 1;
     position: fixed;
     bottom: 30px;
     width: 50%;
