--- a/components/header/header.less
+++ b/components/header/header.less
@@ -7,6 +7,7 @@
       width: 35px;
       line-height: 60px;
       vertical-align: middle;
+      cursor: pointer;
     }
   }
   .title{
@@ -14,6 +15,7 @@
     line-height: 60px;
     vertical-align: middle;
     margin-left: 5px;
+    cursor: pointer;
   }
   .search-bar{
     margin-left: 15px;
